자잘한 코드 수정, 회원가입 시간 signup -> signupDate